Created EntriesPayloadDataModelValidator adapted to work with strategies